tests/snapshots/snapshots__insert_calendar_for_due_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▀▚ /tmp/chiba-snapshot.md  •  15 tasks  DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cle due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home             1      3   (B) Review pull requests for auth  contexts  @laptop                
   +learning         1      4   (B) Renew passport before summer t                                  
   +personal         1      5   (B) Draft hiring rubric for senior RAW                              
   +travel           1     (2)  PRIORITY C  ──────────────────────                                  
                            6   (C) Pay quarterly estimated taxes  (A) 2026-05-01 Finish Q2 board   
 CONTEXTS                   7   (C) Order new running shoes +healt deck +work @laptop               
   @errands          4     (8)┌ ADD TASK ────────────────────────────┐:2026-05-06                   
   @home             4      8 │                                      │                              
   @laptop           4      9 │  › fore summer trip +travel @errands█│                              
   @phone            3     10 │  ok · pri A · 1 +project 1 @context  │                              
                           11 │                                      │                              
                           12 │  format: (A) Buy milk +shop @home due│                              
                           13 │                                      │                              
                           14 └───┌ DUE ───────────────────────────────────────────┐                
                           15     │  ‹  May 2026  ›                                │                
                                  │    S   M   T   W   T   F   S                   │                
                                  │                        1   2                   │                
                                  │    3   4   5   6   7   8   9                   │                
                                  │   10  11  12  13  14  15  16                   │                
                                  │   17  18  19  20  21  22  23                   │                
                                  │   24  25  26  27  28  29  30                   │                
                                  │   31                                           │                
                                  │                                                │                
                                  │  Thu May 7                                     │                
                                  │  t today · T tmw · w +1w · m +1mo · x clear    │                
 INSERT   Enter save · Esc normal └────────────────────────────────────────────────┘· ✿ chiba 0.1.0
